# kenat_py

./: .gitignore  pyproject.toml
kenat/: __init__.py  bahire_hasab.py  conversions.py  day_arithmetic.py  formatting.py  geez_converter.py  holidays.py  kenat.py  month_grid.py  time.py  utils.py
tests/: test_bahire_hasab.py  test_conversions.py  test_day_arithmetic.py  test_geez_converter.py  test_holidays.py  test_time.py
