[project]
name = "kenat"
version = "0.1.0"
description = "Ethiopian Calendar Library in Python"
authors = [{ name="Melaku Demeke", email="melaku.demeke789@gmail.com" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
